--- a/style-page-cover.css
+++ b/style-page-cover.css
@@ -29,7 +29,7 @@ body {
 
 .box {
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     margin: auto;
     display: flex;
