--- a/style-page-cover.css
+++ b/style-page-cover.css
@@ -136,7 +136,7 @@ body {
 @media screen and (min-width: 100px) {
     .container2-1 .judul {
      font-size: 20px;
-     margin-bottom: 4vh;
+     margin-bottom: 25%;
     }
  
     .container2-1 .pengantin {
