--- a/style.css
+++ b/style.css
@@ -22,12 +22,11 @@
     scroll-behavior: smooth;
 }
 
-p {
+* {
     margin: 0;
-    padding: 0;
 }
 
-.body {
+p {
     margin: 0;
     padding: 0;
 }
