--- a/style-page-utama.css
+++ b/style-page-utama.css
@@ -3,9 +3,11 @@ html {
     overflow-x: hidden;
 }
 
-body {
-    padding: 0;
+* {
     margin: 0;
+}
+
+body {
     overflow-x: hidden;
 }
 
@@ -18,16 +20,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    bottom: 40px;
-    right: 23px;
+    bottom: 10px;
+    right: 10px;
 }
 
 #play {
     border: 3px solid black;
     border-radius: 25%;
-    padding: 10px;
+    padding: 7px;
     background-image: url(image/play.png);
-    background-size: 100%;
+    background-size: cover;
     background-color: white;
     margin-right: 5px;
 }
@@ -35,9 +37,9 @@ body {
 #pause {
     border: 3px solid black;
     border-radius: 25%;
-    padding: 10.5px;
+    padding: 7px;
     background-image: url(image/pause.png);
-    background-size: 100%;
+    background-size: cover;
     background-color: white;
 }
 
@@ -49,15 +51,6 @@ body {
     background-color: gold;
 }
 
-#mute {
-    border: 3px solid black;
-    border-radius: 25%;
-    padding: 10px;
-    background-image: url(image/mute.png);
-    background-size: 100%;
-    background-color: white;
-}
-
 @font-face {
     font-family: myFirstFont-1;
     src: url(font/stay-classy.bold.ttf);
@@ -65,7 +58,7 @@ body {
 
 @font-face {
     font-family: myFirstFont-2;
-    src: url(font/shalma.ttf);
+    src: url(font/Stylish\ Calligraphy\ Demo.ttf);
 }
 
 @font-face {
@@ -91,31 +84,27 @@ body {
 
 .container1-1 p {
     font-family: myFirstFont-3;
-    font-size: 30px;
-    margin: 0;
-    line-height: 70px;
+    font-size: 100%;
 }
 
 .container1-1 .pengantin {
-    line-height: 0;
     font-family: myFirstFont-2;
-    font-size: 400px;
+    font-size: 300%;
     color: black;
-    padding-top: 21%;
-    
+    margin: 5% 0;
 }
 
 .container1-1 .buka-undangan {
     border-radius: 15px;
-    margin: 0;
-    padding: 10px;
+    padding: 8px;
     display: inline-block;
     color: white;
     background-color: #31363F;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 15px;
+    font-size: 80%;
     text-decoration: none;
     font-weight: bold;
+    margin-top: 5%;
 }
 
 .container1-1 .buka-undangan:hover {
@@ -128,16 +117,18 @@ body {
 .box2 {
     height: 100vh;
     background-image: url(image/bg3.jpg);
-    background-size: 100%;
-    opacity: 0.5;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: right;
+    opacity: 0.3;
 }
 
 .container1-1 .scroll {
-    font-size: 17px;
+    font-size: 80%;
 }
 
 .mousey {
-    padding: 0.75rem 0.925rem;
+    padding: 0.20rem 0.7rem;
     height: 3rem;
     border: 0.1rem solid black;
     border-radius: 1.4rem;
@@ -149,8 +140,8 @@ body {
 }
 
 .scroller {
-    width: 0.25rem;
-    height: 0.925rem;
+    width: 0.2rem;
+    height: 0.7rem;
     border-radius: 25%;
     background-color: black;
     animation-name: scroll;
@@ -162,46 +153,40 @@ body {
 .halaman-2-cover {
     background-color: #31363F;
     height: 100%;
-    border: 3px solid #31363F;
     text-align: center;
 }
 
 .container2-1 {
+    margin: 0 2%;
     overflow-x: hidden;
 }
 
-.container2-1 .salam {
-    margin-bottom: px;
-    margin-top: px;
-}
-
-.pengantin img {
-    border-radius: 50%;
-    height: 200px;
-    width: 200px;
-    object-fit: cover;
-    object-position: top;
-    border: 2px solid white;
-    margin: 0;
-}
-
 .container2-1 p {
-    font-size: 17px;
+    font-size: 70%;
     font-family: "Montserrat", sans-serif;
     font-weight: 100px;
     color: white;
     margin: 0;
 }
 
+.container2-1 .salam {
+    margin: 5% 0;
+}
+
 .container2-1 .font-style {
     color: white;
     font-family: "Sacramento", cursive;
-    font-size: 50px;
+    font-size: 170%;
+    margin: 3% 0;
 }
 
-.container2-1 .pengantin-pria {
-    margin-top: px;
-    margin-bottom: px;
+.pengantin img {
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+    object-fit: cover;
+    object-position: top;
+    border: 2px solid white;
 }
 
 .container2-1 .dan {
@@ -214,32 +199,24 @@ body {
     font-size: 60px;
 }
 
-.container2-1 .pengantin-wanita {
-    margin-top: px;
-    margin-bottom: px;
-    overflow: hidden;
-}
-
 .container2-2 {
     border: 3px solid white;
     border-radius: 15px;
     text-align: center;
-    margin: 180px 100px 180px 100px;
+    margin: 30% 10%;
 }
 
 .container2-2 p {
-    font-size: 17px;
+    font-size: 70%;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     color: white;
-    margin: 30px;
+    padding: 15px
 }
 
-.container2-2 h3 {
-    font-size: 20px;
-    font-family: "Montserrat", sans-serif;
-    color: white;
-    margin: 30px;
+.container2-2 .surat p {
+    font-size: 100%;
+    font-weight: bold;
 }
 
 .countdown-cover {
@@ -416,182 +393,5 @@ body {
 
 @keyframes monitor {
     resolution; 
-}
-
-/*untuk layar device berukuran 450px*/
-@media screen and (min-width: 450px) {
-    .box2 {
-        background-position: right;
-        background-size: cover;
-    }
-   
-    .container1-1 .pengantin {
-        font-size: 1100%; 
-    }
-
-    .container1-1 .judul {
-        font-size: 25px;
-    }
-
-    .container1-1 .tanggal {
-        font-size: 25px;
-    }
-
-    .container2-1 .salam .font-style {
-        font-size: 210%;
-    }
-
-    .container2-1 .salam p {
-        font-size: 15px;
-        margin: 3% 0px;
-    }
-
-    .container2-1 .pengantin {
-        padding-top: 5%;
-    }
-
-    .container2-2 {
-        margin: 30% 10% 30% 10%;
-    }
-
-    .container2-3 .judul .font-style {
-        font-size: 250%;
-    }
-
-    .countdown .timer {
-        margin: 0px 30px;
-        width: 40px;
-    }
-
-    .countdown-info .timer-info {
-        margin: 0px 25px;
-    }
-    
-    .container2-3 .font-style {
-        font-size: 40px;
-    }
-
-    .lihat-maps {
-        width: 350px;
-        height: 280px;
-    }
-
-    .maps a {
-        font-size: 12px;
-    }
-
-    .container3-1 {
-        margin: 40px 10px 10px 10px;
-    }
-
-    .container3-1 .copyright {
-        margin: 0px 20px;
-    }
-    
-}
-
-/*untuk layar device berukuran 700px*/
-@media screen and (min-width: 700px) { 
-    .container1-1 .pengantin {
-        font-size: 1800%; 
-    }
-
-    .container2-1 .salam .font-style {
-        font-size: 230%;
-    }
-
-    .container2-1 .salam p {
-        font-size: 16px;
-    }
-
-    .countdown .timer {
-        margin: 0px 50px;
-        width: 40px;
-    }
-
-    .salam {
-        margin: 0px 5%;
-    }
-
-    .countdown-info .timer-info {
-        margin: 0px 45px;
-    }
-
-    .container2-2 {
-        margin: 20% 10% 20% 10%;
-    }
-
-    .lihat-maps {
-        width: 500px;
-        height: 300px;
-    }
-
-    .maps a {
-        font-size: 15px;
-    }
-}
-
-/*untuk layar device berukuran 970px*/
-@media screen and (min-width: 970px) {  
-    .container2-3 .undangan {
-        padding: 0px 10%;
-    }
-
-    .container3-1 {
-        margin: 40px 5% 10px 5%;
-    }
-
-    .container2-2 {
-        margin: 15% 10% 15% 10%;
-    }
-}
-
-/*untuk layar device berukuran 1100px*/
-@media screen and (min-width: 1100px) {  
-    .container1-1 .pengantin {
-        font-size: 2800%; 
-    }
-
-    .container2-1 .salam .font-style {
-        font-size: 300%;
-    }
-
-    .container2-1 .salam p {
-        font-size: 17px;
-    }
-
-    .container2-2 {
-        margin: 10% 10% 10% 10%;
-    }
-
-    .countdown .timer {
-        margin: 0px 80px;
-        width: 40px;
-    }
-
-    .countdown-info .timer-info {
-        margin: 0px 75px;
-    }
-
-    .lihat-maps {
-        width: 700px;
-        height: 400px;
-    }
-
-    .container3-1 {
-        margin: 40px 10% 10px 10%;
-    }
-}
-
-/*untuk layar device berukuran 1300px*/
-@media screen and (min-width: 1300px) {  
-    .countdown .timer {
-        margin: 0px 120px;
-        width: 40px;
-    }
-
-    .countdown-info .timer-info {
-        margin: 0px 115px;
-    }
 }
 
