--- a/style-page-cover.css
+++ b/style-page-cover.css
@@ -1,12 +1,3 @@
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    padding: 0;
-    margin: 0;
-}
-
 @font-face {
     font-family: myFirstFont-1;
     src: url(font/stay-classy.bold.ttf);
@@ -19,7 +10,7 @@ body {
 
 @font-face {
     font-family: myFirstFont-3;
-    src: url(font/shalma.ttf);
+    src: url(font/Stylish\ Calligraphy\ Demo.ttf);
 }
 
 @font-face {
@@ -27,71 +18,65 @@ body {
     src: url(font/gotham-medium.ttf);
 }
 
-.box {
-    position: absolute;
-    height: 80vh;
-    width: 100%;
-    margin: auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
+.html {
+    scroll-behavior: smooth;
 }
 
-.container2-1 {
-    text-align: center;
-}
-
-.container2-1 p {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 40px;
+* {
     margin: 0;
 }
 
-.container2-1 .judul {
-    margin-bottom: 10%;
-    font-family: myFirstFont-4;
-}
-
-.container2-1 .tanggal {
-    font-family: myFirstFont-4;
-    line-height: 1px;
-    margin-top: 5%;
-}
-
-.container2-1 .pengantin {
-    font-family: myFirstFont-3;
-    font-size: 2800%;
+.box1 {
     color: black;
-    padding-bottom: 0;
-    line-height: 0;
+    height: 100vh;
+    background-image: url(image/bg3.jpg);
+    background-size: cover;
+    background-position: right;
 }
 
-.container2-1 .buka-undangan {
-    border-radius: 15px;
-    border: 2px solid black;
-    margin-top: 30px;
-    padding: 10px;
-    display: inline-block;
-    color: white;
-    background-color: black;
+.box1-1 {
+    height: 100vh;
+    background-color: white;
+    opacity: 70%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    left: 0;
+    top: 0;
+}
+
+.box1-1-1 {
+    font-size: 80%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 15px;
-    text-decoration: none;
     font-weight: bold;
 }
 
-.container2-1 .buka-undangan:hover {
+.kalimat2 {
+    font-family: myFirstFont-3;
+    font-size: 270%;
+    margin: 8% 0;
     color: black;
-    background-color: white;
-    opacity: 50%;
 }
 
-.box2 {
-    height: 100dvh;
-    background-image: url(image/bg3.jpg);
-    background-size: 100%;
-    opacity: 0.4;
+a {
+    text-decoration: none;
+    color: white;
+    background-color: black;
+    border: 3px solid black;
+    border-radius: 25px;
+    padding: 10px;
+    font-weight: bold;
+    font-size: 70%;
+}
+
+a:hover {
+    color: black;
+    background-color: white;
+}
+
+.tbl-hitam {
+    margin-top: 10%;
 }
 
 .loader {
@@ -104,7 +89,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #31363F;
-    transition: opacity 1000s, visibility 3s;
+    transition: opacity 200s, visibility 3s;
     z-index: 3;
 }
 
@@ -132,160 +117,57 @@ body {
     }
 }
 
+@keyframes scroll {
+    0% {
+        opacity: 0;
+    }
+
+    10% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(1rem);
+        opacity: 0;
+    }
+}
+
+@keyframes monitor {
+    resolution:  
+}
+
 /*untuk layar device berukuran 100px*/
-@media screen and (min-width: 100px) {
-    .container2-1 .judul {
-     font-size: 20px;
-     margin-bottom: 25%;
+@media screen and (min-width: 750px) {
+    .box1-1-1 {
+        font-size: 150%;
     }
- 
-    .container2-1 .pengantin {
-     font-size: 120px;
+    
+    .kalimat2 {
+        font-size: 400%;
+        margin: 8% 0;
     }
- 
-    .container2-1 .tanggal {
-     font-size: 20px;
-     margin-top: 20%;
-    }
- 
-    .box {
-        margin-top: 27%;
-        margin-bottom: 20%;
-    }
-
-    .box2 {
-     background-position: right;
-     background-size: cover;
-    }
-
-    .container2-1 .buka-undangan {
-        font-size: 10px;
+    
+    a {
+        font-size: 70%;
     }
 }
 
-/*untuk layar device berukuran 350px*/
-@media screen and (min-width: 350px) {
-    .container2-1 .judul {
-     font-size: 25px;
-     margin-bottom: 28%;
-    }
- 
-    .container2-1 .pengantin {
-     font-size: 170px;
-    }
- 
-    .container2-1 .tanggal {
-     font-size: 25px;
-     margin-top: 20%;
-    }
- 
-    .box2 {
-     background-position: right;
-     background-size: cover;
+/*untuk layar device berukuran 100px*/
+@media screen and (min-width: 1020px) {
+    .kalimat2 {
+        font-size: 500%;
+        margin: 5% 0;
     }
 
-    .container2-1 .buka-undangan {
-        font-size: 12px;
+    .tbl-hitam {
+        margin-top: 5%;
     }
 }
 
-/*untuk layar device berukuran 450px*/
-@media screen and (min-width: 450px) {
-    .box {
-        margin-top: 17%;
-    }
-    }
-}
-
-/*untuk layar device berukuran 576px*/
-@media screen and (min-width: 576px) {
-   .container2-1 .judul {
-    font-size: 25px;
-    margin-bottom: 28%;
-   }
-
-   .container2-1 .pengantin {
-    font-size: 200px;
-   }
-
-   .container2-1 .tanggal {
-    font-size: 25px;
-    margin-top: 20%;
-   }
-
-   .box2 {
-    background-position: right;
-    background-size: cover;
-   }
-
-   .container2-1 .buka-undangan {
-    font-size: 15px;
-   }
-}
-
-/*untuk layar device berukuran 768px*/
-@media screen and (min-width: 768px) {
-    .container2-1 .judul {
-     font-size: 30px;
-     margin-bottom: 25%;
-    }
- 
-    .container2-1 .pengantin {
-     font-size: 300px;
-    }
- 
-    .container2-1 .tanggal {
-     font-size: 30px;
-     margin-top: 20%;
-    }
- 
-    .box2 {
-     background-position: right;
-     background-size: cover;
+/*untuk layar device berukuran 100px*/
+@media screen and (min-width: 1100px) {
+    .kalimat2 {
+        font-size: 500%;
     }
 }
-
-/*untuk layar device berukuran 992px*/
-@media screen and (min-width: 992px) {
-    .container2-1 .judul {
-     font-size: 30px;
-     margin-bottom: 25%;
-    }
- 
-    .container2-1 .pengantin {
-     font-size: 450px;
-    }
- 
-    .container2-1 .tanggal {
-     font-size: 30px;
-     margin-top: 20%;
-    }
- 
-    .box2 {
-     background-position: right;
-     background-size: cover;
-    }
-}
-
-/*untuk layar device berukuran 1200px*/
-@media screen and (min-width: 1200px) {
-    .container2-1 .judul {
-     font-size: 30px;
-     margin-bottom: 25%;
-    }
- 
-    .container2-1 .pengantin {
-     font-size: 500px;
-    }
- 
-    .container2-1 .tanggal {
-     font-size: 30px;
-     margin-top: 20%;
-    }
- 
-    .box2 {
-     background-position: right;
-     background-size: cover;
-    }
-}
-
