--- a/style-page-utama.css
+++ b/style-page-utama.css
@@ -53,75 +53,64 @@ body {
 
 @font-face {
     font-family: myFirstFont-1;
-    src: url(font/stay-classy.bold.ttf);
-}
-
-@font-face {
-    font-family: myFirstFont-2;
     src: url(font/Stylish\ Calligraphy\ Demo.ttf);
 }
 
-@font-face {
-    font-family: myFirstFont-3;
-    src: url(font/gotham-medium.ttf);
-}
-
-.box {
-    position: absolute;
-    height: 100vh;
-    width: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    overflow: hidden;
-}
-
-.container1-1 {
-    text-align: center;
-}
-
-.container1-1 p {
-    font-family: myFirstFont-3;
-    font-size: 100%;
-}
-
-.container1-1 .pengantin {
-    font-family: myFirstFont-2;
-    font-size: 300%;
+.box1 {
     color: black;
-    margin: 5% 0;
-}
-
-.container1-1 .buka-undangan {
-    border-radius: 15px;
-    padding: 8px;
-    display: inline-block;
-    color: white;
-    background-color: #31363F;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 80%;
-    text-decoration: none;
-    font-weight: bold;
-    margin-top: 5%;
-}
-
-.container1-1 .buka-undangan:hover {
-    color: black;
-    background-color: #F6F5F5;
-    opacity: 50%;
-    font-weight: bold;
-}
-
-.box2 {
     height: 100vh;
     background-image: url(image/bg3.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
     background-position: right;
-    opacity: 0.3;
 }
+
+.box1-1 {
+    height: 100vh;
+    background-color: white;
+    opacity: 70%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    left: 0;
+    top: 0;
+}
+
+.box1-1-1 {
+    font-size: 80%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.kalimat2 {
+    font-family: myFirstFont-1;
+    font-size: 270%;
+    margin: 8% 0;
+    color: black;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    background-color: black;
+    border: 3px solid black;
+    border-radius: 25px;
+    padding: 5px;
+    font-weight: bold;
+    font-size: 70%;
+}
+
+a:hover {
+    color: black;
+    background-color: white;
+}
+
+.tbl-hitam {
+    margin-top: 10%;
+}
+
+
+
 
 .container1-1 .scroll {
     font-size: 80%;
@@ -394,4 +383,6 @@ body {
 @keyframes monitor {
     resolution; 
 }
+
+
 
