--- a/style-page-index.css
+++ b/style-page-index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: myFirstFont-1;
-    src: url(font/stay-classy.bold.ttf);
+    src: url(font/Stylish\ Calligraphy\ Demo.ttf);
 }
 
 @font-face {
@@ -18,13 +18,18 @@
     src: url(font/gotham-medium.ttf);
 }
 
+* {
+    margin: 0;
+}
+
 .html {
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
 
-* {
-    margin: 0;
+.body {
+    height: -webkit-fill-available;
+    overflow-x: hidden;
 }
 
 .block {
@@ -33,28 +38,25 @@
 
 .box0 {
     color: black;
-    height: 100vh;
     background-image: url(image/bg3.jpg);
     background-size: cover;
     background-position: right;
 }
 
 .box0-1 {
-    height: 100vh;
+    height: ;
+    min-height: 100vh;
     background-color: white;
     opacity: 70%;
     display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    left: 0;
-    top: 0;
 }
 
 .box0-1-1 {
     font-size: 80%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
+    text-align: center;
+    margin: auto;
 }
 
 .kalimat2 {
@@ -144,7 +146,7 @@ a:hover {
 
 /*untuk layar device berukuran 100px*/
 @media screen and (min-width: 750px) {
-    .box1-1-1 {
+    .box0-1-1 {
         font-size: 150%;
     }
     
@@ -178,7 +180,13 @@ a:hover {
 }
 
 
-body {
+/*CSS untuk page utama*/
+* {
+    margin: 0;
+}
+
+html {
+    scroll-behavior: smooth;
     overflow-x: hidden;
 }
 
@@ -226,10 +234,7 @@ body {
     background-color: gold;
 }
 
-@font-face {
-    font-family: myFirstFont-1;
-    src: url(font/Stylish\ Calligraphy\ Demo.ttf);
-}
+
 
 #utama {
     display: none; /* Mulai dengan menyembunyikan halaman-1 */
@@ -255,17 +260,14 @@ body {
     background-color: white;
     opacity: 70%;
     display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    left: 0;
-    top: 0;
 }
 
 .box1-1-1 {
     font-size: 80%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
+    text-align: center;
+    margin: auto;
 }
 
 .kalimat2 {
@@ -563,417 +565,4 @@ a:hover {
 
 @keyframes monitor {
     resolution; 
-}
-
-html {
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-}
-
-* {
-    margin: 0;
-}
-
-body {
-    overflow-x: hidden;
-}
-
-.tombol-musik {
-    position: fixed;
-    z-index: 2;
-    margin-left: 160vh;
-    margin-top: 94vh;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    bottom: 10px;
-    right: 10px;
-}
-
-#play {
-    border: 3px solid black;
-    border-radius: 25%;
-    padding: 7px;
-    background-image: url(image/play.png);
-    background-size: cover;
-    background-color: white;
-    margin-right: 5px;
-}
-
-#pause {
-    border: 3px solid black;
-    border-radius: 25%;
-    padding: 7px;
-    background-image: url(image/pause.png);
-    background-size: cover;
-    background-color: white;
-}
-
-#play:hover {
-    background-color: gold;
-}
-
-#pause:hover {
-    background-color: gold;
-}
-
-@font-face {
-    font-family: myFirstFont-1;
-    src: url(font/Stylish\ Calligraphy\ Demo.ttf);
-}
-
-.halaman-1 {
-    animation: transition 600s;
-}
-
-.box1 {
-    color: black;
-    height: 100vh;
-    background-image: url(image/bg3.jpg);
-    background-size: cover;
-    background-position: right;
-}
-
-.box1-1 {
-    height: 100vh;
-    background-color: white;
-    opacity: 70%;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    left: 0;
-    top: 0;
-}
-
-.box1-1-1 {
-    font-size: 80%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-}
-
-.kalimat2 {
-    font-family: myFirstFont-1;
-    font-size: 270%;
-    margin: 20px 0;
-    color: black;
-}
-
-.tbl-hitam a {
-    text-decoration: none;
-    color: white;
-    background-color: black;
-    border: 3px solid black;
-    border-radius: 25px;
-    padding: 5px;
-    font-weight: bold;
-    font-size: 70%;
-}
-
-a:hover {
-    color: black;
-    background-color: white;
-}
-
-.tbl-hitam {
-    margin-top: 20px;
-}
-
-.container1-1 .scroll {
-    font-size: 80%;
-}
-
-.mousey {
-    padding: 0.20rem 0.7rem;
-    height: 3rem;
-    border: 0.1rem solid black;
-    border-radius: 1.4rem;
-    opacity: 0.75;
-    box-sizing: content-box;
-    display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 0;
-}
-
-.scroller {
-    width: 0.2rem;
-    height: 0.7rem;
-    border-radius: 25%;
-    background-color: black;
-    animation-name: scroll;
-    animation-duration: 2.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-}
-
-.halaman-2-cover {
-    background-color: #31363F;
-    text-align: center;
-}
-
-.container2-1 {
-    margin: 0 5px;
-    overflow-x: hidden;
-}
-
-.container2-1 p {
-    font-size: 70%;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 100px;
-    color: white;
-    margin: 0;
-}
-
-.container2-1 .salam {
-    margin: 30px 0;
-}
-
-.container2-1 .font-style {
-    color: white;
-    font-family: "Sacramento", cursive;
-    font-size: 170%;
-    margin: 7px 0;
-}
-
-.pengantin img {
-    border-radius: 50%;
-    height: 150px;
-    width: 150px;
-    object-fit: cover;
-    object-position: top;
-    border: 2px solid white;
-}
-
-.container2-1 .dan p {
-    font-family: "Sacramento", cursive;
-    font-size: 60px;
-}
-
-.container2-2 {
-    border: 3px solid white;
-    border-radius: 15px;
-    text-align: center;
-    margin: 100px 40px;
-}
-
-.container2-2 p {
-    font-size: 70%;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
-    color: white;
-    padding: 15px
-}
-
-.container2-2 .surat p {
-    font-size: 100%;
-    font-weight: bold;
-}
-
-.countdown-cover {
-    border: 3px solid white;
-    border-radius: 25px;
-    display: inline-block;
-    margin-top: 20px;
-    margin-bottom: 10px;
-}
-
-.countdown {
-    border-radius: 50px;
-    font-family: "Montserrat", cursive;
-    color: white;
-    margin-top: 20px;
-    align-items: center;
-    display: inline-flex;
-}
-
-.countdown-info {
-    border-radius: 50px;
-    font-family: "Montserrat", cursive;
-    font-weight: bold;
-    color: white;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-}
-
-.countdown .timer {
-    margin: 0px 25px;
-    font-size: 150%;
-    display: inline-flex;
-    width: 10px;
-    justify-content: center;
-}
-
-.countdown-info .timer-info {
-    margin: 10px 25px;
-    font-size: 100%;
-    display: flex;
-    width: 10px;
-    justify-content: center;
-}
-
-.container2-3 p {
-    color: white;
-    font-size: 70%;
-    font-family: "Montserrat", cursive;
-    font-weight: 500;
-    margin: 1vh;
-}
-
-.container2-3 .font-style {
-    font-family: "Sacramento", cursive;
-    font-size: 170%;
-}
-
-.container2-3 .undangan {
-    margin: 20px 0;
-}
-
-.container2-3 .akad {
-    margin-bottom: 30px;
-}
-
-.container2-3 .resepsi {
-    margin-bottom: 30px;
-}
-
-.container2-3 a {
-    font-size: 70%;
-    font-family: "Montserrat", cursive;
-    color: black;
-    background-color: white;
-    border: 3px solid #31363F;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 8px;
-    border-radius: 15px;
-    margin: 1vh;
-    display: inline-flex;
-}
-
-.container2-3 a:hover {
-    color: white;
-    background-color: #31363F;
-    border: 3px solid white;
-}
-
-.container2-3 .maps .lihat-maps {
-    border: 3px solid #31363F;
-    display: inline-flex;
-}
-
-.googlemaps {
-    width: 250px;
-    height: 200px;
-}
-
-.container3-1 {
-    color: white;
-    margin: 40px 10px 0 10px;
-}
-
-.container3-1 p {
-    font-family: "Montserrat", cursive;
-    font-size: 70%;
-    margin-bottom: 10px;
-}
-
-.container3-1 .font-style {
-    font-family: "Sacramento", cursive;
-    font-size: 110%;
-}
-
-.container3-1 .copyright {
-    border-top: 2px solid white;
-    font-weight: bold;
-    font-size: 70%;
-    font-family: "Montserrat", cursive;
-    padding: 10px 0;
-}
-
-.loader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #31363F;
-    transition: opacity 200s, visibility 3s;
-    z-index: 3;
-}
-
-.loader-hidden {
-    opacity: 0;
-    visibility: hidden;
-}
-
-.loader::after {
-    content: "";
-    width: 75px;
-    height: 75px;
-    border: 15px solid white;
-    border-top-color: gold;
-    border-radius: 50%;
-    animation: loading 1s ease infinite;
-}
-
-@keyframes loading {
-    from {
-        transform: rotate(0turn);
-    }
-    to {
-        transform: rotate(1turn);
-    }
-}
-
-@keyframes scroll {
-    0% {
-        opacity: 0;
-    }
-
-    10% {
-        transform: translateY(0);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateY(1rem);
-        opacity: 0;
-    }
-}
-
-@keyframes monitor {
-    resolution; 
-}
-
-@keyframes transition {
-    from {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-/*untuk layar device berukuran 100px*/
-@media screen and (min-width: 750px) {
-    .box1-1-1 {
-        font-size: 150%;
-    }
-    
-    .kalimat2 {
-        font-size: 350%;
-        margin: 50px 0;
-    }
-    
-    .tbl-hitam a {
-        font-size: 70%;
-    }
 }
