--- a/style-page-index.css
+++ b/style-page-index.css
@@ -18,18 +18,13 @@
     src: url(font/gotham-medium.ttf);
 }
 
-* {
-    margin: 0;
-}
-
 .html {
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
 
-.body {
-    height: -webkit-fill-available;
-    overflow-x: hidden;
+* {
+    margin: 0;
 }
 
 .block {
@@ -38,13 +33,14 @@
 
 .box0 {
     color: black;
+    height: 100vh;
     background-image: url(image/bg3.jpg);
     background-size: cover;
     background-position: right;
 }
 
 .box0-1 {
-    height: 100svh;
+    height: 100vh;
     background-color: white;
     opacity: 70%;
     display: flex;
@@ -55,7 +51,7 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
     text-align: center;
-    margin: auto;
+    margin: 30vh auto;
 }
 
 .kalimat2 {
@@ -143,41 +139,6 @@ a:hover {
     resolution:  
 }
 
-/*untuk layar device berukuran 100px*/
-@media screen and (min-width: 750px) {
-    .box0-1-1 {
-        font-size: 150%;
-    }
-    
-    .kalimat2 {
-        font-size: 400%;
-        margin: 8% 0;
-    }
-    
-    a {
-        font-size: 70%;
-    }
-}
-
-/*untuk layar device berukuran 100px*/
-@media screen and (min-width: 1020px) {
-    .kalimat2 {
-        font-size: 500%;
-        margin: 5% 0;
-    }
-
-    .tbl-hitam {
-        margin-top: 5%;
-    }
-}
-
-/*untuk layar device berukuran 100px*/
-@media screen and (min-width: 1100px) {
-    .kalimat2 {
-        font-size: 500%;
-    }
-}
-
 
 /*CSS untuk page utama*/
 * {
@@ -186,6 +147,10 @@ a:hover {
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+}
+
+body {
     overflow-x: hidden;
 }
 
@@ -248,14 +213,14 @@ html {
 
 .box1 {
     color: black;
-    height: 100svh;
+    height: 100vh;
     background-image: url(image/bg3.jpg);
     background-size: cover;
     background-position: right;
 }
 
 .box1-1 {
-    height: 100svh;
+    height: 100vh;
     background-color: white;
     opacity: 70%;
     display: flex;
@@ -564,4 +529,179 @@ a:hover {
 
 @keyframes monitor {
     resolution; 
+}
+
+@media screen and (min-width: 450px) {
+    .box0-1-1 {
+        font-size: 100%;
+    }
+    
+    .box0-1-1 .kalimat2 {
+        font-size: 400%;
+        margin: 8% 0;
+    }
+    
+    .box0-1-1 a {
+        font-size: 70%;
+    }
+
+    .box1-1-1 {
+        font-size: 100%;
+    }
+    
+    .box1-1-1 .kalimat2 {
+        font-size: 330%;
+    }
+
+    .container2-1 {
+        margin: 0 3%;
+    }
+
+    .countdown .timer {
+        margin: 0px 30px;
+        font-size: 150%;
+        width: 25px;
+    }
+    
+    .countdown-info .timer-info {
+        margin: 10px 30px;
+        font-size: 100%;
+        width: 25px;
+    }
+
+    .container2-3 {
+        margin: 0 3%;
+    }
+
+    .container3-1 {
+        margin: 0 3%;
+    }
+
+    .googlemaps {
+        width: 300px;
+        height: 200px;
+    }
+}
+
+@media screen and (min-width: 550px) {
+    .box0-1-1 {
+        font-size: 100%;
+    }
+    
+    .box0-1-1 .kalimat2 {
+        font-size: 400%;
+        margin: 8% 0;
+    }
+    
+    .box0-1-1 a {
+        font-size: 70%;
+    }
+}
+
+@media screen and (min-width: 750px) {
+    .box0-1-1 {
+        font-size: 150%;
+    }
+    
+    .box0-1-1 .kalimat2 {
+        font-size: 380%;
+        margin: 8% 0;
+    }
+    
+    .box0-1-1 a {
+        font-size: 70%;
+    }
+
+    .box1-1-1 {
+        font-size: 120%;
+    }
+    
+    .box1-1-1 .kalimat2 {
+        font-size: 400%;
+    }
+
+    .container2-1 {
+        margin: 0 10%;
+    }
+
+    .countdown .timer {
+        margin: 0px 50px;
+        font-size: 180%;
+        width: 25px;
+    }
+    
+    .countdown-info .timer-info {
+        margin: 10px 50px;
+        font-size: 110%;
+        width: 25px;
+    }
+
+    .container2-3 {
+        margin: 0 10%;
+    }
+
+    .container3-1 {
+        margin: 0 10%;
+    }
+
+    .googlemaps {
+        width: 400px;
+        height: 230px;
+    }
+}
+
+@media screen and (min-width: 950px) {
+    .cover {
+        display: flex;
+    }
+
+    .cover1 {
+        width: 70%;
+    }
+
+    .box1 {
+        position: fixed;
+        width: 70%;
+    }
+
+    .box-cover {
+        width: 30%;
+    }
+    
+    .container2-1 p {
+        font-size: 70%;
+    }
+    
+    .container2-1 .font-style {
+        font-size: 130%;
+    }
+
+    .container2-3 .font-style {
+        font-size: 130%;
+    }
+
+    .countdown .timer {
+        margin: 0px 15px;
+        font-size: 150%;
+        width: 25px;
+    }
+    
+    .countdown-info .timer-info {
+        margin: 10px 15px;
+        font-size: 80%;
+        width: 25px;
+    }
+
+    .container2-3 {
+        margin: 0 10%;
+    }
+
+    .container3-1 {
+        margin: 0 10%;
+    }
+
+    .googlemaps {
+        width: 230px;
+        height: 230px;
+    }
 }
