--- a/style-page-index.css
+++ b/style-page-index.css
@@ -34,7 +34,7 @@
 .box0 {
     color: black;
     height: 100vh;
-    background-image: url(image/bg3.jpg);
+    background-image: url(image/bg2.JPG);
     background-size: cover;
     background-position: right;
 }
@@ -59,6 +59,16 @@
     font-size: 270%;
     margin: 8% 0;
     color: black;
+}
+
+.tamu-undangan {
+    font-size: 70%;
+    margin-top: 60px;
+}
+
+.font-tamu-undangan {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 20px;
 }
 
 a {
@@ -214,9 +224,9 @@ body {
 .box1 {
     color: black;
     height: 100vh;
-    background-image: url(image/bg3.jpg);
+    background-image: url(image/bg1.JPG);
     background-size: cover;
-    background-position: right;
+    background-position: center;
 }
 
 .box1-1 {
@@ -237,7 +247,7 @@ body {
 .kalimat2 {
     font-family: myFirstFont-1;
     font-size: 270%;
-    margin: 20px 0;
+    margin: 40px 0;
     color: black;
 }
 
@@ -303,7 +313,6 @@ a:hover {
     font-family: "Montserrat", sans-serif;
     font-weight: 100px;
     color: white;
-    margin: 0;
 }
 
 .container2-1 .salam {
@@ -314,16 +323,29 @@ a:hover {
     color: white;
     font-family: "Sacramento", cursive;
     font-size: 170%;
-    margin: 7px 0;
 }
 
-.pengantin img {
-    border-radius: 50%;
-    height: 150px;
-    width: 150px;
-    object-fit: cover;
-    object-position: top;
-    border: 2px solid white;
+.container2-1 .font-style-pengantin-pria {
+    color: white;
+    font-family: "Sacramento", cursive;
+    font-size: 220%;
+    margin: 15px 0 0 0;
+}
+
+.container2-1 .font-style-pengantin-wanita {
+    color: white;
+    font-family: "Sacramento", cursive;
+    font-size: 220%;
+}
+
+.container2-1 .pengantin {
+    background-color: #31363F;
+    color: white;
+}
+
+.pengantin p {
+    color: white;
+    font-weight: bold;
 }
 
 .container2-1 .dan p {
@@ -334,6 +356,7 @@ a:hover {
 .container2-2 {
     border: 3px solid white;
     border-radius: 15px;
+    
     text-align: center;
     margin: 100px 40px;
 }
@@ -465,10 +488,20 @@ a:hover {
     font-size: 110%;
 }
 
+.container3-1 .font-style-terimakasih {
+    font-family: "Sacramento", cursive;
+    font-size: 150%;
+    margin-top: 40px;
+}
+
+.container3-1 .terimakasih {
+    margin-bottom: 40px;
+}
+
 .container3-1 .copyright {
     border-top: 2px solid white;
     font-weight: bold;
-    font-size: 70%;
+    font-size: 40%;
     font-family: "Montserrat", cursive;
     padding: 10px 0;
 }
@@ -574,7 +607,7 @@ a:hover {
     }
 
     .container3-1 {
-        margin: 0 3%;
+        margin: 40px 10% 0 10%;
     }
 
     .googlemaps {
@@ -641,7 +674,7 @@ a:hover {
     }
 
     .container3-1 {
-        margin: 0 10%;
+        margin: 40px 10% 0 10%;
     }
 
     .googlemaps {
@@ -697,7 +730,7 @@ a:hover {
     }
 
     .container3-1 {
-        margin: 0 10%;
+        margin: 40px 10% 0 10%;
     }
 
     .googlemaps {
